--- a/Glass/Vue/Producao/Templates/LstProducao.Pecas.html
+++ b/Glass/Vue/Producao/Templates/LstProducao.Pecas.html
@@ -1,4 +1,4 @@
-<section>
+﻿<section>
     <lista-paginada ref="lista" v-bind:funcao-recuperar-itens="buscarPecas" v-bind:ordenacao="ordenacao" v-bind:filtro="filtro" v-on:atualizou-itens="atualizouItens">
         <template slot="cabecalho">
             <th></th>
@@ -39,8 +39,11 @@
         </template>
         <template slot="item" slot-scope="{ item, index }">
             <td style="white-space: nowrap">
-                <button v-on:click.prevent="alternarExibicaoFilhos(index)" v-if="item.produtoPedido && item.produtoPedido.composto">
-                    <img src="../../Images/mais.gif" v-bind:title="(exibindoFilhos(index) ? 'Esconder' : 'Exibir') + ' Produtos da Composição'" />
+                <button v-on:click.prevent="alternarExibicaoFilhos(index)" v-if="item.produtoPedido && item.produtoPedido.composto && !exibindoFilhos(index)">
+                    <img src="../../Images/mais.gif" title="Exibir Produtos da Composição" />
+                </button>
+                <button v-on:click.prevent="alternarExibicaoFilhos(index)" v-if="item.produtoPedido && item.produtoPedido.composto && exibindoFilhos(index)">
+                    <img src="../../Images/menos.gif" title="Esconder Produtos da Composição" />
                 </button>
                 <button v-on:click.prevent="desfazerUltimaLeituraPeca(item)" v-if="item.permissoes && item.permissoes.desfazerLeitura">
                     <img src="../../Images/arrow_undo.gif" title="Remover peça desta situação" />
