--- a/Glass/Vue/Carregamentos/Itens/Pendencias/Templates/ListaPendenciaCarregamento.Filtro.html
+++ b/Glass/Vue/Carregamentos/Itens/Pendencias/Templates/ListaPendenciaCarregamento.Filtro.html
@@ -13,7 +13,7 @@
         </span>
         <span class="form-group">
             <label>Loja</label>
-            <lista-selecao-lojas v-bind:loja.sync="filtroAtual.idLoja" v-bind:ativas="true"></lista-selecao-lojas>
+            <lista-selecao-lojas v-bind:loja.sync="lojaAtual" v-bind:ativas="true"></lista-selecao-lojas>
             <button class="botaoPesquisar" v-on:click.prevent="filtrar" title="Pesquisar"></button>
         </span>
     </div>
@@ -25,8 +25,7 @@
         </span>
         <span class="form-group">
             <label>Rota</label>
-            <lista-selecao-multipla v-bind:funcao-recuperar-itens="obterItensFiltroRotas" v-bind:ids-selecionados.sync="filtroAtual.idsRota"
-                                    ></lista-selecao-multipla>
+            <lista-selecao-multipla v-bind:funcao-recuperar-itens="obterItensFiltroRotas" v-bind:ids-selecionados.sync="filtroAtual.idsRota"></lista-selecao-multipla>                                    
             <button class="botaoPesquisar" v-on:click.prevent="filtrar" title="Pesquisar"></button>
         </span>
     </div>
@@ -39,8 +38,7 @@
         </span>
         <span class="form-group" v-if="configuracoes.controlarPedidosImportados">
             <label>Rota Externa</label>
-            <lista-selecao-multipla v-bind:funcao-recuperar-itens="obterItensFiltroRotas" v-bind:ids-selecionados.sync="filtroAtual.idsRotaExterna"
-                                    ></lista-selecao-multipla>
+            <lista-selecao-multipla v-bind:funcao-recuperar-itens="obterItensFiltroRotas" v-bind:ids-selecionados.sync="filtroAtual.idsRotaExterna"></lista-selecao-multipla>                                    
             <button class="botaoPesquisar" v-on:click.prevent="filtrar" title="Pesquisar"></button>
         </span>
     </div>
