--- a/Glass/Vue/_Compartilhado/Templates/Base/CampoTelefone.html
+++ b/Glass/Vue/_Compartilhado/Templates/Base/CampoTelefone.html
@@ -1,1 +1,1 @@
-﻿<campo-com-mascara v-bind:mascara="obterMascara" v-bind:valor.sync="telefoneAtual"></campo-com-mascara>
+﻿<campo-com-mascara v-bind:mascara="obterMascara" v-bind:valor.sync="telefoneAtual" style="width: 105px"></campo-com-mascara>
