--- a/Glass/Vue/_Compartilhado/Templates/Base/CampoTelefone.html
+++ b/Glass/Vue/_Compartilhado/Templates/Base/CampoTelefone.html
@@ -1,1 +1,2 @@
-﻿<campo-com-mascara v-bind:mascara="obterMascara" v-bind:valor.sync="telefoneAtual" style="width: 105px"></campo-com-mascara>
+﻿<campo-com-mascara v-bind:mascara="obterMascara" v-bind:valor.sync="telefoneAtual" style="width: 105px"
+    pattern="\([1-9]{2}\) [1-9]{1,2}\d{3}-\d{4}[\u2000 ]{0,1}"></campo-com-mascara>
